syntax = "proto3";

package grpc_tutorial;

option go_package= ".;pb";
option java_package = "com.github.MrAzharuddin.grpc_tutorial.pb";
option java_multiple_files = true;

message PingRequest {
}

message PingResponse {
    string message = 1;
}

service PingService {
    rpc Ping (PingRequest) returns (PingResponse);
}